fix button borders on small screens

--- a/src/assets/_scss/elements/_buttons.scss
+++ b/src/assets/_scss/elements/_buttons.scss
@@ -72,23 +72,22 @@
     overflow: hidden;
     padding: 0;
     text-transform: uppercase;
-    @include media-breakpoint-up(lg) {
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      bottom: 0;
+      left: 0;
+      width: 30px;
+      height: 2px;
+      background-color: $orange;
+      z-index: 1;
+      @include transition(0.5s);
+    }
+    &:hover,
+    &.active {
       &::after {
-        content: "";
-        position: absolute;
-        display: block;
-        bottom: 0;
-        left: 0;
-        width: 30px;
-        height: 2px;
-        background-color: $orange;
-        @include transition(0.5s);
-      }
-      &:hover,
-      &.active {
-        &::after {
-          width: 100%;
-        }
+        width: 100%;
       }
     }
     &.btn-border-white {
